@@ -150,7 +150,8 @@ enum
     SFX_LarryShell,
     SFX_LarryKilled = 100,
     SFX_LudwigKilled,
-    SFX_ZeldaIce
+    SFX_ZeldaIce,
+    SFX_ZeldaFireRod
 };
 
 int CustomWorldMusicId();
