@@ -37,6 +37,7 @@ Changelog for 1.3.6
 -Removed the "require-ground-to-enter-warps" compat.ini option as redundant: there is the native option of LVLX and 38A-LVL level formats to enable this behaviour. (@Wohlstand)
 -Some options of the compat.ini have been renamed (for backward compatibility, there are aliases kept) (@Wohlstand)
 -Added the individual sound for Link's iceball shoot (@Wohlstand)
+-Added the proper sound for Link's fireball shoot (@Wohlstand)
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
